# Rutherford_experiment_simulation

./: CMakeLists.txt  engine.cpp  engine.hpp  main.cpp  old_root.txt  phi_gaussian_fit.ipynb  phi_uniform_fit.ipynb  python_fit.py  rat.C  rat.cpp  rat.hpp
alternative_algorithms/: gaussian_main.cpp  leapfrog.cpp  rungekutta.cpp
important_angles/: ang10k.txt  ang40k.txt  angular.txt
py_code_for_dist_correctness_verification/: dist_initial_pos.txt  fit_gauss_pos-py.py
python_calcoli/: alpha_stop_position.ipynb  alpha_vel_in_given_pos.ipynb  general_calc_for_debag.ipynb  integral.py  pdf_phi_gauss-dist.ipynb  pdf_phi_unif-dist.ipynb  uniform_extrems_calc.ipynb
